--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8762
 
 spring.application.name=eureka-server
-eureka.instance.hostname=peer2
+eureka.instance.hostname=localhost
 
 #由于该应用为注册中心，所以设置为false，代表不向注册中心注册自己,默认是true
 eureka.client.register-with-eureka=false
@@ -10,4 +10,4 @@ eureka.client.fetch-registry=false
 
 #如果不配置 eureka.instance.appname, 默认 eureka.instance.appname = ${spring.application.name}
 #eureka.instance.appname =${spring.application.name}
-eureka.client.serviceUrl.defaultZone=http://peer1:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
